--- a/app/assets/stylesheets/aboutus_new.scss
+++ b/app/assets/stylesheets/aboutus_new.scss
@@ -1,674 +1,189 @@
-// body
-//   //display: flex
-//   justify-content: center
-//    align-items: center
-//   height: 40vh
-//   background-color: #000
-//
-// .letter-i
-//   width: 80vh
-//   height: 80vh
-//
-//
-// .cls-1
-//   $delay: calc(var(--item) * 1s)
-//   fill: none
-//   stroke: #000
-//   stroke-miterlimit: 10
-//   stroke-width: 5px
-//   stroke-linecap: round
-//   stroke-miterlimit: 10
-//   stroke-dasharray: 1500
-//   animation: lines 4s infinite $delay
-//
-// .dot
-//   stroke-dasharray: 500
-//   stroke: var(--color)
-//
-// .stem
-//   stroke: var(--color)
-//
-// @keyframes lines
-//   100%
-//     stroke-dashoffset: 3000
+.header_F{
+  @import url(https://fonts.googleapis.com/css?family=Bungee);
 
-//aboutuse-container
-.main{
-  background-color: #ff9500;
-}
-.slogan {
+*, ::before, ::after{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-.slogan {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  // height: 100vh;
-  // width: 100vw;
-}
-.slogan h1 {
-  color: #333;
-  font-family: tahoma;
-  font-size: 3rem;
-  font-weight: 100;
-  line-height: 1.5;
-  text-transform: uppercase;
-  white-space: nowrap;
-  overflow: hidden;
-  position: relative;
-  width: 550px;
+html, body{
+  height: 100%;
 }
 
-.slogan h1 span {
-  font-size: 40px;
-  margin-left: 40px;
+body{
+  font-family: bungee, Arial, Helvetica, sans-serif;
 }
 
-.message {
-  background-color: yellow;
-  color: #333;
-  display: block;
-  font-weight: 900;
-  overflow: hidden;
-  position: absolute;
-  padding-left: 0.5rem;
-  top: 0.2rem;
-  left: 288px;
-  animation: openclose 5s ease-in-out infinite;
+.container{
+  background-image: linear-gradient(
+  to bottom,
+    #FFF01F 50%,
+    #eb466b 50%
+  );
 }
 
-.word1, .word2, .word3 {
-  font-family: tahoma;
-}
-
-@keyframes openclose {
-  0% {
-    top: 0.2rem;
-    width: 0;
-  }
-  5% {
-    width: 0;
-  }
-  15% {
-    width: 230px;
-  }
-  30% {
-    top: 0.2rem;
-    width: 230px;
-  }
-  33% {
-    top: 0.2rem;
-    width: 0;
-  }
-  35% {
-    top: 0.2rem;
-    width: 0;
-  }
-  38% {
-    top: -4.5rem;
-
-  }
-  48% {
-    top: -4.5rem;
-    width: 190px;
-  }
-  62% {
-    top: -4.5rem;
-    width: 190px;
-  }
-  66% {
-    top: -4.5rem;
-    width: 0;
-    text-indent: 0;
-  }
-  71% {
-    top: -9rem;
-    width: 0;
-    text-indent: 5px;
-  }
-  86% {
-    top: -9rem;
-    width: 285px;
-  }
-  95% {
-    top: -9rem;
-    width: 285px;
-  }
-  98% {
-    top: -9rem;
-    width: 0;
-    text-indent: 5px;
-  }
-  100% {
-    top: 0;
-    width: 0;
-    text-indent: 0;
-  }
-}
-
-
-:root {
-  --black: black;
-  --rose: #e91e63;
-}
-
-a {
-  color: inherit;
-}
-
-small {
-  font-weight: 300;
-}
-
-p {
-  font-size: 20px;
-  line-height: 35px;
-  margin: 30px 0 0 0;
-}
-
-.banner-section::after {
+.container::after {
   content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.25);
+  display: block;
+  min-height: 100vh;
 }
 
-.banner-section .container {
-  z-index: 1;
+.content {
+  min-height: 50vh;
+  position: sticky;
+  top: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 100px;
+  mix-blend-mode: exclusion;
 }
 
-.section {
-  padding: 50px 0 0 0;
+h1{
+  color: #0fff2b;
+  font-size: clamp(40px, 9vw, 140px)
 }
 
-.nav-pills .nav-item:not(:last-child) {
-  margin-right: 20px;
+p{
+  color: #f7ff0f;
+  font-size: clamp(20px, 5vw, 70px)
 }
 
-.nav-pills .nav-item .nav-link {
-  font-size: 18px;
-  padding: 10px 25px;
-  text-transform: none;
-}
 
-.card-columns {
-  column-count: 1;
-  column-gap: 20px;
-}
-
-.card-columns .card {
-  margin: 0 0 20px 0;
-}
-
-.card-columns h4 {
-  font-size: 22px;
-}
-
-.card-img-overlay {
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.form-control,
-.is-focused .form-control {
-  background-image: linear-gradient(0deg, var(--rose) 2px, rgba(156, 39, 176, 0) 0),
-    linear-gradient(0deg, #d2d2d2 1px, hsla(0, 0%, 82%, 0) 0);
-}
-
-.form-check .form-check-input:checked + .form-check-sign .check {
-  background: var(--rose);
-}
-
-.form-row button {
-  font-size: 16px;
-}
-
-.btn.back-to-top {
-  bottom: 50px;
-  right: 30px;
-  z-index: 10;
-  opacity: 0.5;
-  transition: all 0.2s;
-}
-
-.btn.back-to-top.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.btn.back-to-top:hover {
-  opacity: 1;
 }
 
 
 
-@media (min-width: 576px) {
-  .card-columns {
-    column-count: 2;
+
+.film{
+  .card-text{
+    color: yellow;
   }
-}
+  @import url("https://fonts.googleapis.com/css2?family=Asap&display=swap");
+  * {
+    margin: -12px;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Asap", sans-serif;
+  }
+  body {
+    background: #42455a;
 
+  }
+  section {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  section:nth-child(1) {
+    color: #e0ffff;
+  }
+  section:nth-child(2) {
+    // color: #42455a;
+    background-image: url("assets/firefly1.jpg");
 
+  }
+  section:nth-child(3) {
+    color: #e0ffff;
+  }
+  section:nth-child(4) {
+    color: #42455a;
+    background: #e0ffff;
+  }
+  section .container {
+    margin: 100px;
+  }
+  section h1 {
+    font-size: 3rem;
+    margin: 20px;
+  }
+  section h2 {
+    font-size: 40px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  section .text-container {
+    display: flex;
+  }
+  section .text-container .card {
+    margin: 40px;
+    padding: 0px;
+    background: black;
 
-.senction_2{
-
-  //Font
-  @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
-
-  //Variables
-  $mobile-breakpoint: 350px;
-  $large-mobile-breakpoint: 530px;
-  $tablet-breakpoint: 700px;
-  $desktop-breakpoint: 1200px;
-
-
-  //Mixins
-  //Centering Mixins
-  @mixin horizontal-center {
-    margin-left: auto;
-    margin-right: auto;
   }
 
-  @mixin vertical-center {
+  section .text-container .text-box h3  {
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+
+  @media (max-width: 900px) {
+    section h1 {
+      font-size: 2rem;
+      text-align: center;
+    }
+    section .text-container {
+      flex-direction: column;
+    }
+  }
+
+  .reveal {
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    opacity: 0;
   }
 
-
-  //Media Query mixins
-  @mixin mobile {
-    @media (min-width: #{$mobile-breakpoint}) and (max-width: #{$large-mobile-breakpoint - 1}) {
-      @content;
-    }
+  .reveal.active {
+    opacity: 1;
   }
-
-  @mixin tablet {
-    @media (min-width: #{$large-mobile-breakpoint}) and (max-width: #{$tablet-breakpoint - 1}) {
-      @content;
-    }
+  .active.fade-bottom {
+    animation: fade-bottom 1s ease-in;
   }
-
-  @mixin desktop {
-    @media (min-width: #{$tablet-breakpoint}) and (max-width: #{$desktop-breakpoint}) {
-      @content;
-    }
+  .active.fade-left {
+    animation: fade-left 1s ease-in;
   }
-
-  //Animations
-  @keyframes fade-in {
+  .active.fade-right {
+    animation: fade-right 1s ease-in;
+  }
+  @keyframes fade-bottom {
     0% {
+      transform: translateY(50px);
       opacity: 0;
     }
     100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-left {
+    0% {
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
       opacity: 1;
     }
   }
 
-  @keyframes slide-in {
-     0% {
-      top: -300px;
-    }
-    100% {
-      top: 0;
-    }
-  }
-
-  @keyframes scaleDown {
-      0% {
-      transform: scale(1);
-    }
-     10% {
-      transform: scale(0.7);
-    }
-     95% {
-      transform: scale(0.7);
-    }
-     100% {
-      transform: scale(1);
-    }
-  }
-
-  @keyframes reveal-info {
+  @keyframes fade-right {
     0% {
-      height: 0;
-    }
-    5% {
-      height: 350px;
-    }
-    95% {
-      height: 350px;
+      transform: translateX(100px);
+      opacity: 0;
     }
     100% {
-      height: 0;
+      transform: translateX(0);
+      opacity: 1;
     }
   }
 
-  //Body
-
-  body {
-    margin: 0;
-    padding: 0;
-  }
-
-
-  .container {
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 1200px;
-    height: 700px;
-    background-color:#D7CCC8 ;
-    font-size: 14px;
-    font-family: "Montserrat", sans;
-    .container-inner {
-     width: 100%;
-     height: 80%;
-     display: flex;
-     flex-direction: row;
-     justify-content: flex-start;
-     position: relative;
-     animation: fade-in 1.5s ease, slide-in 1.2s ease;
-     -webkit-animation: fade-in 1.5s ease, slide-in 1.2s ease;
-      .main-content {
-        flex-basis: 50%;
-        order: 1;
-        align-self: center;
-        display: flex;
-        flex-direction: column;
-        .main-headings {
-          width: 100%;
-          align-self: center;
-          display: flex;
-          flex-direction: column;
-          animation: scaleDown 6s ease 2s;
-         -webkit-animation: scaleDown 6s ease 2s;
-          #by-line {
-            width: 60%;
-            padding-bottom: 1px;
-            padding-left: 3px;
-            margin-left: 15px;
-            font-size: 85%;
-            border-bottom: 1px solid #757575;
-            font-style: italic;
-          }
-          .heading {
-           // align-self: flex-end;
-             margin-top: 20px;
-             margin-left: 80px;
-            #heading1, #heading2, #heading3 {
-              margin: 0;
-              margin-top: -20px;
-            }
-            #heading1, #heading2 {
-              font-size: 500%;
-              font-weight:normal;
-              letter-spacing: -2px;
-            }
-            #heading1 {
-              margin-left: 50px;
-              }
-            #heading2 {
-              margin-left: 150px;
-            }
-            #heading3 {
-              margin-top: -52px;
-              font-size: 1100%;
-              font-weight: 800;
-              letter-spacing: 2px;
-              }
-          }
-          .short-bio {
-            width: 60%;
-            margin-top: -30px;
-            margin-left: 90px;
-            font-style: italic;
-            font-size: 105%;
-          }
-          a {
-           // width: 72%;
-            margin-left: 92px;
-           // margin-right: auto;
-            align-self: flex-start;
-            font-weight: bold;
-            font-size: 120%;
-            font-family: helvetica;
-            text-decoration: none;
-            color: black;
-            &:hover {
-              text-decoration: underline;
-            }
-          }
-        }
-         .more-info {
-            margin-top: -70px;
-            width: 50%;
-            height: 0;
-            margin-left: auto;
-            margin-right: auto;
-            align-self: flex-start;
-            overflow: hidden;
-            animation: reveal-info 4s ease 3s;
-           -webkit-animation: reveal-info 4s ease 3s;
-         }
-      }
-      .image-wrapper {
-        flex-basis: 50%;
-        order: 2;
-        //background-color was #8D6E63
-        .image-container {
-          width: 100%;
-          height: 100%;
-          overflow: hidden;
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-          animation: scaleDown 6s ease 2s ;
-         -webkit-animation: scaleDown 6s ease 2s;
-          img {
-            width: 100%;
-            height: auto;
-            position: relative;
-           }
-          }
-        }
-     }
-  }
-
-
-
-  //Media Query for mobile devices
-  @include mobile {
-     * {
-      animation-name: none !important;
-    }
-    .container {
-      width: 90%;
-      height: 700px;
-      @include horizontal-center;
-      font-size: 5px;
-      margin-bottom: 20px;
-    }
-    .container-inner {
-      flex-direction: column !important;
-      justify-content: center !important;
-    }
-    .main-content, .image-wrapper {
-      flex-basis: 100% !important;
-    }
-    .main-content {
-      order: 2 !important;
-      outline: 1px solid red;
-      margin: 0 50px;
-    }
-    .image-wrapper {
-      order: 1 !important;
-    }
-    .heading {
-      margin-left: 55px !important;
-    }
-    #heading1, #heading2 {
-     margin: 0;
-     margin-top: -5px !important;
-      }
-    #heading2 {
-      margin-left: 100px !important;
-    }
-    #heading3 {
-      margin-top: -20px !important;
-    }
-    .short-bio {
-      margin-top: -10px !important;
-      margin-left: 60px !important;
-    }
-     .more-info {
-      height: 150px !important;
-      width: 60% !important;
-      margin: 0 !important;
-      align-self: flex-start !important;
-      margin-top: 0px !important;
-      margin-left: 60px !important;
-      //text-align: justify;
-      font-size: 8px;
-    }
-    .link {
-      display: none;
-    }
-    .image-wrapper {
-      order: 1 !important;
-      width: 100%;
-      height: 100px !important;
-      justify-content: center !important;
-    }
-    .image-container {
-      width: 100% !important;
-      height: 400px;
-      @include horizontal-center;
-      @include vertical-center;
-    }
-    img {
-      width: 80% !important;
-      height: auto !important;
-      top: -20px;
-      @include horizontal-center;
-    }
-  }
-
-
-  //Media Query for tablet devices
-
-  @include tablet {
-    * {
-      animation-name: none !important;
-    }
-    .container {
-      width: 90%;
-      height: 900px;
-      @include horizontal-center;
-      font-size: 8px;
-    }
-    .container-inner {
-      flex-direction: column !important;
-      justify-content: center !important;
-    }
-    .main-content, .image-wrapper {
-      flex-basis: 100% !important;
-    }
-    .main-content {
-      width: 80%;
-      order: 2 !important;
-      align-self: center !important;
-    }
-    .main-headings {
-      width: 100%;
-      margin-top: 20px;
-      @include horizontal-center;
-    }
-    .heading {
-      margin-left: 55px !important;
-    }
-    #heading1, #heading2 {
-      margin: 0;
-      margin-top: -15px !important;
-      }
-    #heading3 {
-      margin-top: -30px !important;
-    }
-    .short-bio {
-      margin-top: -20px !important;
-      margin-left: 60px !important;
-    }
-    .link {
-      display: none;
-    }
-    .more-info {
-      height: 150px !important;
-      width: 60% !important;
-      margin: 0 !important;
-      align-self: flex-start !important;
-      margin-top: 0px !important;
-      margin-left: 60px !important;
-      text-align: justify;
-    }
-    .image-wrapper {
-      order: 1 !important;
-      width: 100%;
-      height: 400px;
-      justify-content: center !important;
-    }
-    .image-container {
-      width: 100% !important;
-      height: 400px;
-      @include horizontal-center;
-    }
-    img {
-      width: 80% !important;
-      height: auto !important;
-      top: -20px;
-      @include horizontal-center;
-    }
-  }
-
-  /*
-
-  @include tablet {
-    .container {
-      width: 100%;
-      height: auto;
-      font-size: 7px;
-    }
-    #heading3 {
-      margin-top: -35px !important;
-    }
-    .link {
-      margin-left: 30px;
-    }
-    .more-info {
-      margin-top: -40px !important;
-    }
-  }
-  */
-  //Media query for desktop devices
-
-  @include desktop {
-    .container {
-      width: 100%;
-      height: auto;
-      font-size: 9px;
-    }
-    #heading3 {
-      margin-top: -35px !important;
-    }
-    .link {
-      margin-left: 30px;
-    }
-    .more-info {
-      margin-top: -40px !important;
-    }
-  }
+  // .name_middle{
+  //   background: -webkit-font-smoothing(to right, #FFF01F 0%, #eb466b 100%);
+  //
+  // }
 
 }
