--- a/app/views/forums/new.html.erb
+++ b/app/views/forums/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New Forum</h1>
+<svg viewBox="0 0 960 300", class= "ant">
+  <symbol id="s-text">
+    <text text-anchor="middle" x="50%" y="80%">Forum </text>
+    <text text-anchor="middle" x="52%" y="80%">Forum </text>
+  </symbol>
+
+  <g class = "g-ants">
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+    <use xlink:href="#s-text" class="text-copy"></use>
+  </g>
+</svg>
 
 <%= render 'form', forum: @forum %>
 
-<%= link_to 'Back', forums_path %>
+<button class="glow-on-hover" type="button" ><%= link_to 'Back', forums_path %></button>
