--- a/app/assets/stylesheets/index1.scss
+++ b/app/assets/stylesheets/index1.scss
@@ -154,7 +154,7 @@ $color_grey_dark: #a2a2a2;
   }
   p {
     position: relative;
-    color: #f1f1f1;;
+    color: #f1f1f1;
     margin: 1rem 0 0;
     &:first-of-type {
       margin-top: 1.25rem;
