make the footer stick to the buttom of the page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,12 @@
     <p class="alert"><%= alert %></p> -->
     <%= render('shared/navbar1') %>
     <%= yield %>
-    <%= render('shared/footer') %>
+
     <!-- <button  id="myBtn">click</button>
     <p id="demo">11</p> -->
 
   </body>
+  <footer>
+     <%= render('shared/footer') %>
+  </footer>
 </html>
