--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,3 +1,10 @@
 .Copyright{
   text-decoration: none;
 }
+
+footer {
+    clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: 200px;
+}
