--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script> -->
-    <script>
-
-   </script>
-
+     <script
+     defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-TJwbVJvJa5FiQb7TtWMGLpmpawrQwjc&callback=initMapEvent&libraries=places&v=weekly"
+      async
+    ></script>
+  
+  
+    # <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script> -->
 
   </head>
 
