added link to map

--- a/app/views/shared/_navbar1.html.erb
+++ b/app/views/shared/_navbar1.html.erb
@@ -10,7 +10,7 @@
     </div>
     <ul1 class="nav-links">
         <li1><a href="/">Home</a></li1>
-        <li1><a href="#">Map</a></li1>
+        <li1><a href="/gmap">Map</a></li1>
         <li1><a href="/forums">Forum</a></li1>
         <li1><a href="/aboutus_new">About Us</a></li1>
         <li1><a href="#">Contact Us</a></li1>
