found firefly section and add it into homepage

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,32 +1,103 @@
+<script type="text/javascript">
+  var scene = document.getElementById('scene');
+   var parallax = new Parallax(scene);
+</script>
 <body>
-<section class="section_fir">
-  1
-  <div class="ratio ratio-16x9" style="text-align:center">
-  <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
-  </div>
-</section>
+    <section class="first">
+      <div class="wrapper">
 
-<section class="section_sec">
-  2
-</section>
+          <div class="container">
 
-<section class="section_third">
-  3
-</section>
+              <div id="scene" class="scene" data-hover-only="false">
 
-       <ul class="pagination " style="justify-content: center">
-         <li class="page-item">
-           <a class="page-link" href="#" aria-label="Previous">
-             <span aria-hidden="true">&laquo;</span>
-           </a>
-         </li>
-         <li class="page-item"><a class="page-link" href="#">1</a></li>
-         <li class="page-item"><a class="page-link" href="#">2</a></li>
-         <li class="page-item"><a class="page-link" href="#">3</a></li>
-         <li class="page-item">
-           <a class="page-link" href="#" aria-label="Next">
-             <span aria-hidden="true">&raquo;</span>
-           </a>
-         </li>
-       </ul>
+
+                  <div class="circle" data-depth="1.2"></div>
+
+                  <div class="one" data-depth="0.9">
+                      <div class="content">
+                          <span class="piece"></span>
+                          <span class="piece"></span>
+                          <span class="piece"></span>
+                      </div>
+                  </div>
+
+                  <div class="two" data-depth="0.60">
+                      <div class="content">
+                          <span class="piece"></span>
+                          <span class="piece"></span>
+                          <span class="piece"></span>
+                      </div>
+                  </div>
+
+                  <div class="three" data-depth="0.40">
+                      <div class="content">
+                          <span class="piece"></span>
+                          <span class="piece"></span>
+                          <span class="piece"></span>
+                      </div>
+                  </div>
+
+                  <p class="p404" data-depth="0.50" color="yellow">Firefly</p>
+                  <p class="p404" data-depth="0.10">Firefly</p>
+
+              </div>
+
+              <div class="text">
+                  <article>
+                      <p>Welcome to join our family <br>There is your dome</p>
+
+                  </article>
+              </div>
+
+          </div>
+      </div>
+
+    </section>
+
+
+<!-- <section class="second">
+<div id="icon-wrapper">
+  <a href="map.html">
+    <div class="icons">
+      <div class="icon-slide-container">
+        <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/view-map.jpg">
+        </div>
+      </div>
+    </a>
+
+    <a href="kite-map.php">
+      <div class="icons2">
+        <div class="icon-slide-container">
+          <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/add-beach.jpg">
+          </div>
+        </div>
+      </a>
+
+      <a href="location.php">
+        <div class="icons3">
+          <div class="icon-slide-container">
+            <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/view-all.jpg">
+            </div>
+          </div>
+        </a>
+
+        <a href="feedback.html">
+          <div class="icons4">
+            <div class="icon-slide-container">
+              <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/feedback.jpg">
+              </div>
+            </div>
+          </a>
+	</div>
+</section> -->
+
+<!-- <section class="section_third">
+
+</section> -->
+
+
+
+       <section class="third">
+
+       </section>
 </body>
