--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -97,11 +97,14 @@ body, button, input {
 
 .screen-body {
   display: flex;
+  flex-direction: column;
+
 }
 
 .screen-body-item {
   flex: 1;
   padding: 50px;
+
 }
 
 .screen-body-item.left {
@@ -158,6 +161,7 @@ body, button, input {
 
 .app-form-group {
   margin-bottom: 10px;
+
 }
 
 .app-form-group.message {
@@ -180,6 +184,7 @@ body, button, input {
   text-transform: uppercase;
   outline: none;
   transition: border-color .2s;
+
 }
 
 .app-form-control::placeholder {
@@ -270,7 +275,7 @@ body, button, input {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
   .screen-body {
     padding: 40px;
   }
