Fixed Password Update Bug

--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -35,4 +35,13 @@
     }
   }
 }
+
 */
+trix-editor {
+  &.form-control {
+    min-height: 20rem;
+    max-width: 43rem;
+    width: auto;
+    height: auto;
+  }
+}
