--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -26,10 +26,10 @@
   <div class="blog-body">
     <div class="blog-title">
       <br>
-      <h1><%= @forum.title %></h1>
+      <h1><%=  @forum.title %></h1>
     </div>
     <div class="blog-summary">
-      <p><%= @forum.richcontent %></p>
+      <p>{{<%= @forum.richcontent %>}}</p>
     </div>
     <div class="blog-tags">
       <ul>
