--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -8,27 +8,29 @@
             <span style="color:yellow">PROFILE</span>
           </div>
           <div class="app-personal">
-          <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px"<%= image_tag @user.thumbnail%><span class="font-weight-bold"><%= @user.firstname + " " + @user.lastname%></span><span class="font-weight-bold"><%= @user.email%></span><span> </span></div>
+          <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px"<%= image_tag @user.thumbnail%><span class="font-weight-bold" style="color:yellow"><%= @user.firstname + " " + @user.lastname%></span><span class="font-weight-bold" style="color:yellow"><%= @user.email%></span><span> </span></div>
         </div>
     </div>
         <div class="screen-body-item">
           <div class="app-form">
             <div class="app-form-group">
-              <%=f.label :firstname ,class: "app-subhead" %><br /><%= f.text_field :firstname,class: "form-control",placeholder: "First Name", autofocus: true, autocomplete: "firstname" %>
+              <%=f.label "First Name" ,class: "app-subhead" %><br /><%= f.text_field :firstname,class: "form-control",placeholder: "First Name", autofocus: true, autocomplete: "firstname" %>
             </div>
             <div class="app-form-group">
-              <%=f.label :lastname ,class: "app-subhead" %><br /><%= f.text_field :lastname,class: "form-control",placeholder: "Last Name", autofocus: true, autocomplete: "lastname" %>
+              <%=f.label "Last Name" ,class: "app-subhead" %><br /><%= f.text_field :lastname,class: "form-control",placeholder: "Last Name", autofocus: true, autocomplete: "lastname" %>
             </div>
             <div class="app-form-group">
              <%= f.label :email,class: "app-subhead"  %><br /><%= f.email_field :email,class: "form-control",placeholder: "Email", autofocus: true, autocomplete: "email" %>
             </div>
             <div class="app-form-group">
-              <%= f.label :password,class: "app-subhead"  %><br /><%= f.password_field :password,class: "form-control",placeholder: "Password", autofocus: true, autocomplete: "new-password" %>
+              <%= f.label "New Password",class: "app-subhead"  %><br /><%= f.password_field :password,class: "form-control",placeholder: "Password", autofocus: true, autocomplete: "new-password" %>
             </div>
             <div class="app-form-group">
               <%= f.label :password_confirmation,class: "app-subhead"  %><br /><%= f.password_field :password_confirmation,class: "form-control",placeholder: "Password Confirmation", autofocus: true, autocomplete: "new-password" %>
             </div>
-            
+            <div class="app-form-group">
+              <%= f.label :current_password,class: "app-subhead"  %><br /><%= f.password_field :current_password,class: "form-control",placeholder: "Current Password", autofocus: true, autocomplete: "current-password" %>
+            </div>
               <center><button class="app-form-button" ><div class="actions"><%= f.submit "SAVE PROFILE", class:"app-form-button" %></div></button></center>
               <% end %>
           </div>
