--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -34,10 +34,7 @@
     }
   }
 }
-<<<<<<< HEAD
-
-*/
-trix-editor {
+.trix-editor {
   &.form-control {
     min-height: 20rem;
     max-width: 43rem;
@@ -45,5 +42,4 @@ trix-editor {
     height: auto;
   }
 }
-=======
->>>>>>> refs/remotes/origin/develop
+
