--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,7 +1,6 @@
- @import "aboutus";
-
-@import 'ionut';
+@import "aboutus";
 @import 'gmap';
+@import 'rooms';
 
 .section_fir{
   background-color: #555;
@@ -29,3 +28,4 @@
 .pagination{
 background-color: #777;
 }
+
