--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/gmap"><font color='yellow'size='4'> Map&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </font></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/rooms"><font color='yellow'size='4'> Rooms&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </font></a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           <font color='yellow'size='4'> About Us</font>
@@ -41,11 +44,6 @@
         <li class="nav-item">
           <a class="nav-link" href="/forums"><font color='yellow'size='4'>Forum&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</font></a>
         </li>
-
-         <li class="nav-item">
-          <a class="nav-link" href = "/ionut"><font color='yellow'size='4'> Ionut </font></a>
-        </li>
-
       </ul>
      <form class="d-flex">
        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
