--- a/app/views/shared/_navbar1.html.erb
+++ b/app/views/shared/_navbar1.html.erb
@@ -12,6 +12,7 @@
         <li1><a href="/">Home</a></li1>
         <li1><a href="/gmap">Map</a></li1>
         <li1><a href="/forums">Forum</a></li1>
+        <li1><a href="/rooms">Rooms</a></li1>
         <li1><a href="/aboutus_new">About Us</a></li1>
         <li1><a href="#">Contact Us</a></li1>
         <% if user_signed_in? %>
