--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,14 +1,14 @@
-.message{
+// .message{
     
-    .content{
-        background-color: rgb(230, 222, 222);
-        padding: 8px 12px;
-        border-radius: 15px;
-    }
-    .author{
-        font-size: 0.9rem;
-        color: rgb(128, 128, 123);
-        margin-left: 10px;
-    }
+//     .content{
+//         background-color: rgb(230, 222, 222);
+//         padding: 8px 12px;
+//         border-radius: 15px;
+//     }
+//     .author{
+//         font-size: 0.9rem;
+//         color: rgb(128, 128, 123);
+//         margin-left: 10px;
+//     }
 
-}
+// }
