--- a/app/views/home/gmap.html.erb
+++ b/app/views/home/gmap.html.erb
@@ -17,7 +17,7 @@
                   </div>
             </form>
             <div class= "continer-fluid">
-                  <div id='map-g' data-googlemap-target="gmaps" data-action="Events@document->googlemap#initMap" ></div>
+                  <div id='map-g' data-googlemap-target="gmaps" data-action="Events@document->googlemap#initMap" style = "width:100%; height:600px;"></div>
 
             </div>
             <div class = "output" data-googlemap-target = "output">
@@ -26,3 +26,5 @@
             </div>
       </div>
 </div>
+
+
