--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 
-    <footer class="text-center text-white" style="background: linear-gradient(to right, #FFF01F 0%, #eb466b 100%);">
+    <footer class="text-center text-white">
 
 
 
