--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -110,6 +110,7 @@ body, button, input {
 .screen-body-item.left {
   display: flex;
   flex-direction: column;
+  margin-bottom: -80px;
 }
 
 .app-title {
