add section in about us page

--- a/app/assets/stylesheets/aboutus_new.scss
+++ b/app/assets/stylesheets/aboutus_new.scss
@@ -1,4 +1,6 @@
 .head{
+  margin-left: auto;
+  margin-right: auto;
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Playfair+Display:wght@400;700&display=swap');
 
 .hero-section {
