--- a/app/javascript/stylesheets/footer.scss
+++ b/app/javascript/stylesheets/footer.scss
@@ -20,14 +20,14 @@
 //     text-align: center;
 //     display: none;
 // }
-hr{
-  width: 80%;
-  margin: 10px auto;
-  height: 1px;
-  background-image: linear-gradient(
-  to right,
-  rgba(255, 255, 255, 0),
-  cyan,
-  rgba(0, 0, 0, 0);
-  );
-}
+// hr{
+//   width: 80%;
+//   margin: 10px auto;
+//   height: 1px;
+//   background-image: linear-gradient(
+//   to right,
+//   rgba(255, 255, 255, 0),
+//   cyan,
+//   rgba(0, 0, 0, 0);
+//   );
+// }
