--- a/app/views/home/aboutus_new.html.erb
+++ b/app/views/home/aboutus_new.html.erb
@@ -38,15 +38,6 @@
 
 
 
-<!--
-  <div class="header_F">
-    <div class="container">
-    <div class="content">
-      <h1>We are Firefly</h1>
-      <p>We are a cluster of firefly, light your way</p>
-    </div>
-   </div>
-  </div> -->
 
 
 <section class="head">
@@ -81,11 +72,73 @@ and sharing their location with other parties, or asking for help in an emergenc
     </div>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </section>
 
-    <div class="film">
-      <section class="team">
-       <div class="container1">
+
+
+
+
+  <div class="film">
+    <section class="team" class="container reveal fade-bottom" style="background-image: linear-gradient(180deg, rgba(0,0,0,.3), pink)";>
+     <div class="container1">
+
+             <div class="card-wrapper">
+
+               <div class="card">
+
+                 <div class="card-image">
+                   <img src="https://image.ibb.co/dUTfmJ/profile_img.jpg" alt="profile one">
+                 </div>
+
+               <ul class="social-icons">
+                 <li>
+                   <a href="">
+                     <i class="fab fa-facebook-f"></i>
+                   </a>
+                 </li>
+                 <li>
+                   <a href="">
+                     <i class="fab fa-instagram"></i>
+                   </a>
+                 </li>
+                 <li>
+                   <a href="">
+                     <i class="fab fa-twitter"></i>
+                   </a>
+                 </li>
+                 <li>
+                   <a href="">
+                     <i class="fab fa-dribbble"></i>
+                   </a>
+                 </li>
+               </ul>
+
+               <div class="details">
+                 <h2>Ionut
+                   <br>
+                   <span class="job-title">Project Manager</span>
+                 </h2>
+               </div>
+             </div>
+           </div><!-- end box wrapper -->
+          </div><!-- END container -->
+
+          <div class="container1">
 
                <div class="card-wrapper">
 
@@ -119,9 +172,9 @@ and sharing their location with other parties, or asking for help in an emergenc
                  </ul>
 
                  <div class="details">
-                   <h2>Ionut
+                   <h2>Taimoor
                      <br>
-                     <span class="job-title">Project Manager</span>
+                     <span class="job-title">Back-end leader</span>
                    </h2>
                  </div>
                </div>
@@ -162,9 +215,9 @@ and sharing their location with other parties, or asking for help in an emergenc
                    </ul>
 
                    <div class="details">
-                     <h2>Taimoor
+                     <h2>Jun
                        <br>
-                       <span class="job-title">Back-end leader</span>
+                       <span class="job-title">Front-end leader</span>
                      </h2>
                    </div>
                  </div>
@@ -205,9 +258,9 @@ and sharing their location with other parties, or asking for help in an emergenc
                      </ul>
 
                      <div class="details">
-                       <h2>Jun
+                       <h2>Dingyu
                          <br>
-                         <span class="job-title">Front-end leader</span>
+                         <span class="job-title">Front-end member</span>
                        </h2>
                      </div>
                    </div>
@@ -248,7 +301,7 @@ and sharing their location with other parties, or asking for help in an emergenc
                        </ul>
 
                        <div class="details">
-                         <h2>Dingyu
+                         <h2>Kez
                            <br>
                            <span class="job-title">Front-end member</span>
                          </h2>
@@ -257,55 +310,13 @@ and sharing their location with other parties, or asking for help in an emergenc
                    </div><!-- end box wrapper -->
                   </div><!-- END container -->
 
-                  <div class="container1">
-
-                       <div class="card-wrapper">
-
-                         <div class="card">
-
-                           <div class="card-image">
-                             <img src="https://image.ibb.co/dUTfmJ/profile_img.jpg" alt="profile one">
-                           </div>
-
-                         <ul class="social-icons">
-                           <li>
-                             <a href="">
-                               <i class="fab fa-facebook-f"></i>
-                             </a>
-                           </li>
-                           <li>
-                             <a href="">
-                               <i class="fab fa-instagram"></i>
-                             </a>
-                           </li>
-                           <li>
-                             <a href="">
-                               <i class="fab fa-twitter"></i>
-                             </a>
-                           </li>
-                           <li>
-                             <a href="">
-                               <i class="fab fa-dribbble"></i>
-                             </a>
-                           </li>
-                         </ul>
-
-                         <div class="details">
-                           <h2>Kez
-                             <br>
-                             <span class="job-title">Front-end member</span>
-                           </h2>
-                         </div>
-                       </div>
-                     </div><!-- end box wrapper -->
-                    </div><!-- END container -->
+</section>
 
 
 
-        <!-- </div> -->
 
 
-      </section>
+
 
 
     <section>
