--- a/app/assets/stylesheets/index1.scss
+++ b/app/assets/stylesheets/index1.scss
@@ -216,7 +216,7 @@ $color_grey_dark: #a2a2a2;
 
 
   .glow-on-hover {
-    margin-left: 1500px;
+    margin-left: 1200px;
     a{
       text-decoration: none;
       color: green;
@@ -236,7 +236,7 @@ $color_grey_dark: #a2a2a2;
 
 .glow-on-hover:before {
     content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    // background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
     position: absolute;
     top: -2px;
     left:-2px;
@@ -280,4 +280,3 @@ $color_grey_dark: #a2a2a2;
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
-
