--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -8,6 +8,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <button type="button" class="btn btn-danger"><%= f.button :submit %></button>
   </div>
 <% end %>
